fix bug with incorrect display of layout on mobile

--- a/resources/sass/indexPage/indexPage.scss
+++ b/resources/sass/indexPage/indexPage.scss
@@ -32,6 +32,11 @@ ol {
 
 // кастомные классы
 
+.main {
+    overflow: hidden;
+    max-width: 100%;
+}
+
 .white-background {
     background-color: #fff;
 }
